logs/pyparty.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparty'...
Listing './lib/python3.5/site-packages/pyparty/background'...
Listing './lib/python3.5/site-packages/pyparty/bundled'...
Listing './lib/python3.5/site-packages/pyparty/data'...
Compiling './lib/python3.5/site-packages/pyparty/data/__init__.py'...
***   File "./lib/python3.5/site-packages/pyparty/data/__init__.py", line 89
    print gwu(rez=(50,5000)).shape
            ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyparty/descriptors'...
Listing './lib/python3.5/site-packages/pyparty/logging_utils'...
Compiling './lib/python3.5/site-packages/pyparty/multi.py'...
***   File "./lib/python3.5/site-packages/pyparty/multi.py", line 372
    lambda(p): r'\bf{:.0f}'.format(p * sum(attr_list) / 100)
          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyparty/patterns'...
Compiling './lib/python3.5/site-packages/pyparty/scale.py'...
***   File "./lib/python3.5/site-packages/pyparty/scale.py", line 131
    print '%s %s  [ %s %s X %s ]' % (self.r2(outval), self.unit,
                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyparty/scripts'...
Listing './lib/python3.5/site-packages/pyparty/scripts/objectmodeling'...
Compiling './lib/python3.5/site-packages/pyparty/scripts/objectmodeling/_configobjhunt.py'...
***   File "./lib/python3.5/site-packages/pyparty/scripts/objectmodeling/_configobjhunt.py", line 157
    print type(test), test.keys()
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyparty/scripts/objectmodeling/objecthunt.py'...
***   File "./lib/python3.5/site-packages/pyparty/scripts/objectmodeling/objecthunt.py", line 75
    print "The function I modify has been called {0} times(s).".format(
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyparty/shape_models'...
Listing './lib/python3.5/site-packages/pyparty/tools'...
Compiling './lib/python3.5/site-packages/pyparty/tools/canvas.py'...
***   File "./lib/python3.5/site-packages/pyparty/tools/canvas.py", line 1108
    print c.rez
          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyparty/trait_types'...
Compiling './lib/python3.5/site-packages/pyparty/utils.py'...
***   File "./lib/python3.5/site-packages/pyparty/utils.py", line 948
    print guess_colors(guess, c, threechan=True)
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pyparty-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
